--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "url": "https://github.com/seflless/skewed/issues"
   },
   "keywords": [
-    "publishing",
-    "typescript",
-    "module",
+    "svg",
+    "infographics",
+    "3D",
     "package"
   ],
   "type": "module",
@@ -39,13 +39,15 @@
     "cli-test": "vitest run",
     "coverage": "vitest run --coverage"
   },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
     "@types/node": "^18.11.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
