Made vite use port 3000, that's just what I'm used to using. Changed README to match

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "dist"
   ],
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
