--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "keywords": [
     "svg",
     "infographics",
-    "3D",
-    "package"
+    "vector graphics",
+    "3D"
   ],
   "type": "module",
   "main": "./dist/skewed.umd.cjs",
@@ -45,8 +45,6 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.3",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
