Added code to convert from svg paths to a 3d equivalent. For now it will project to the ground plane

--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "vite": "^4.0.0",
     "vite-plugin-dts": "^1.7.1",
     "vitest": "^0.26.3"
+  },
+  "dependencies": {
+    "invariant": "^2.2.4"
   }
 }
